# ruby

./: CMakeLists.txt  config.hpp
Core/: Main.cpp
Render/: Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
Utils/: Compiler.hpp  Utils.hpp
